[package]
name = "rust-idioms"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.3"

[[bench]]
name = "simple_bench"
path = "./src/rust_lang/simple_bench.rs"
harness = false

[[bench]]
name = "inline_fn"
path = "./src/rust_lang/inline_fn.rs"
harness = false

[[bench]]
name = "concatenating_string"
path = "./src/rust_lang/concatenating_string.rs"
harness = false