[package]
name = "rust-idioms"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.3.5"
regex = "1.5"
clap = "2.33.3"
piston_window = "0.120.0"
piston2d-graphics = "0.40.0"
rand = "0.8.4" 
bincode = "1.3.3"
serde = "1.0.130"
serde_cbor = "0.11.2"
serde_derive = "1.0.130"
serde_json = "1.0.68"
byteorder="1.4.3"
crc="1.7"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
trust-dns = { version = "0.16", default-features = false }
crossbeam="0.8.1"

# example multiple bin
# [[bin]]
# name = "akv_mem"
# path = "src/akv_mem.rs"

# [[bin]]
# name = "akv_disk"
# path = "src/akv_disk.rs"

[[example]]
name = "file_line"
path = "examples/file/file_line.rs"

[[example]]
name = "std_tcp"
path = "examples/std_tcp/app.rs"

[[example]]
name = "heap_mem"
path = "examples/heap_mem/app.rs"

[[example]]
name = "yum_db"
path = "examples/yum_db/app.rs"

[[example]]
name = "cdn_resolve"
path = "examples/cdn_resolve.rs"

[[bench]]
name = "simple_bench"
path = "./src/rust_lang/simple_bench.rs"
harness = false

[[bench]]
name = "inline_fn"
path = "./src/rust_lang/inline_fn.rs"
harness = false

[[bench]]
name = "concatenating_string"
path = "./src/rust_lang/concatenating_string.rs"
harness = false

[[bench]]
name = "command_bench"
path = "./src/design_pattern/behavioral/command_bench.rs"
harness = false

[[bench]]
name = "flow_control_bench"
path = "./src/rust_lang/flow_control_bench.rs"
harness = false
